# component-mailkit-extractor

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: push.yml
component_config/: component_long_description.md  component_short_description.md  configSchema.json  documentationUrl.md  licenseUrl.md  sourceCodeUrl.md
src/: component.py  configuration.py  mailkit_client.py
